<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back1" >

    <TableRow
        android:id="@+id/tableRow0"
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:layout_weight="2"
        android:padding="5dip" >

        <TextView
            android:id="@+id/text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:textColor="#ffffff"
            android:textSize="10sp">

        </TextView>
    </TableRow>
    <TableRow
        android:id="@+id/tableRow1"
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:layout_weight="4"
        android:padding="5dip" >

        <ImageButton
            android:id="@+id/image1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:background="@drawable/button4"
            android:contentDescription="@string/antena1enabled" />

        <ImageButton
            android:id="@+id/image2"
            android:contentDescription="@string/antena2enabled"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/button4" />
    </TableRow>

    <TableRow
        android:id="@+id/tableRow2"
        android:layout_width="wrap_content"
        android:layout_height="fill_parent"
        android:layout_weight="4"
        android:padding="5dip" >

        <ImageButton
            android:id="@+id/image3"
            android:contentDescription="@string/antena3enabled"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:background="@drawable/button4" />

        <ImageButton
            android:id="@+id/image4"
            android:contentDescription="@string/antena4enabled"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/button4" />
    </TableRow>

</TableLayout>