<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back1"
    android:orientation="horizontal"
    android:paddingLeft="20dp"
    android:paddingRight="20dp"
    android:paddingTop="20dp" >

    <Button
        android:id="@+id/history_button"
        style="@style/button_text"
        android:layout_width="160dp"
        android:layout_height="60dp"
        android:layout_alignBaseline="@+id/active_button"
        android:layout_alignBottom="@+id/active_button"
        android:layout_alignParentRight="true"
        android:layout_marginRight="32dp"
        android:background="@drawable/red_button"
        android:onClick="pickCoat"
        android:text="@string/pickUp_coat" />

    <ImageView
        android:id="@+id/welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/desc"
        android:src="@drawable/copacabawelc" />

    <ImageView
        android:id="@+id/enjoy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/history_button"
        android:layout_below="@+id/active_button"
        android:layout_marginRight="13dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/desc"
        android:src="@drawable/copacabanaenjoy" />

    <ImageView
        android:id="@+id/image"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_alignLeft="@+id/welcome"
        android:layout_below="@+id/welcome"
        android:layout_marginLeft="12dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:contentDescription="@string/desc"
        android:src="@drawable/copacabana" />

    <Button
        android:id="@+id/active_button"
        style="@style/button_text"
        android:layout_width="160dp"
        android:layout_height="60dp"
        android:layout_below="@+id/image"
        android:layout_marginRight="16dp"
        android:layout_marginTop="25dp"
        android:layout_toLeftOf="@+id/history_button"
        android:background="@drawable/red_button"
        android:onClick="checkCoat"
        android:text="@string/check_coat" />
     
</RelativeLayout>